--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule ".vim/pack/plugins/start/vim-groovy"]
 	path = .vim/pack/plugins/start/vim-groovy
 	url = git@github.com:johnlim/vim-groovy.git
+[submodule ".vim/pack/plugins/start/editorconfig-vim"]
+	path = .vim/pack/plugins/start/editorconfig-vim
+	url = git@github.com:editorconfig/editorconfig-vim.git
